All clickable images placed inside anchor tags.

--- a/Decumani Email Signature 2025.html
+++ b/Decumani Email Signature 2025.html
@@ -84,9 +84,8 @@
         <span class="contact-info titles"> Translator | Interpreter | Software Developer </span>
         <span class="contact-info-company"> Decumani Language Services & Solutions LLC </span>
         <span class="contact-info">
-            <span class="contact-info-title">Homepage | Let's Talk! </span>
-            <a href="https://www.decumanilangllc.com"  href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"></a>
             
+            <a href="https://www.decumanilangllc.com"><span class="contact-info-title">Homepage |</span></a><a href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"><span>Let's Talk!</span></a>  
         </span>
         <span class="contact-info">
             <span class="contact-info-title">Phone: </span>
@@ -99,21 +98,16 @@
             
         </span>
     <div class="social_links"> 
-      <img src="./Assets/facebook.png" width="45"
-             <a href="https://www.facebook.com/mike.superlink/"
-            />
-            <img src="./Assets/linkedin.png" width="45"
-             <a href="https://www.linkedin.com/in/michael-sherokee/"
-            />
-            <img src="./Assets/proz.com_icon.png" width="45"
-             <a href="https://www.proz.com/translator/2909606/"
-            />
-            <img src="./Assets/instagram.png" width="45"
-             <a href="https://www.instagram.com/decumani_languages/"
-            />
-            <img src="./Assets/github.png" width="45"
-            <a href="https://github.com/MicheleDS79"
-            />
+      <a href="https://www.facebook.com/mike.superlink/"><img src="./Assets/facebook.png" width="45">
+             </a>
+            <a href="https://www.linkedin.com/in/michael-sherokee/"><img src="./Assets/linkedin.png" width="45">
+            </a>
+             <a href="https://www.proz.com/translator/2909606/"><img src="./Assets/proz.com_icon.png" width="45">  
+            </a>
+            <a href="https://www.instagram.com/decumani_languages/"><img src="./Assets/instagram.png" width="45">
+             </a>
+            <a href="https://github.com/MicheleDS79"><img src="./Assets/github.png" width="45">
+            </a>
      </div>   
 </body>
 </html>
