--- a/Decumani Email Signature 2025.html
+++ b/Decumani Email Signature 2025.html
@@ -13,7 +13,7 @@
                 display: flex;
                 border: 1px solid;
                 width: 300px 300px;
-                background: #ddebf8;
+                background-image: linear-gradient(#6ca4d8, white);
                 justify-content: auto;
                 padding: 20px;
             }
@@ -72,6 +72,11 @@
                 padding-top: 3%;
 
             }
+
+            .social_links a:hover {
+                transform: scale(1.15);
+                transition: transform 0.6s ease;
+            }
         </style>
         <div class="email-signature-container">
     <img 
@@ -85,7 +90,7 @@
         <span class="contact-info-company"> Decumani Language Services & Solutions LLC </span>
         <span class="contact-info">
             
-            <a href="https://www.decumanilangllc.com"><span class="contact-info-title">Homepage |</span></a><a href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"><span>Let's Talk!</span></a>  
+            <a href="https://www.decumanilangllc.com"><span class="contact-info-title">Homepage | </span></a><a href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"><span>Let's Talk!</span></a>  
         </span>
         <span class="contact-info">
             <span class="contact-info-title">Phone: </span>
@@ -108,6 +113,6 @@
              </a>
             <a href="https://github.com/MicheleDS79"><img src="./Assets/github.png" width="45">
             </a>
-     </div>   
-</body>
+        </div>
+  </body>
 </html>
