--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/
+TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv=""X-UA-Compatible" content=""IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Professional E-signature</title>
 </head>
 <body>
     <div>
-        <style>
+        <style type="text/css">
+            body {
+                margin: 0;
+                background-color: #ffffff;
+            }
+            table {
+                border-spacing: 0;
+            }
+
             .email-signature-container {
                 display: flex;
                 border: 1px solid;
