--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
     <div>
         <style type="text/css">
             body {
-                margin: 0;
+                margin: 15px;
                 background-color: #ffffff;
             }
             table {
@@ -20,7 +20,7 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
             .email-signature-container {
                 display: flex;
-                border: 1px solid;
+                border: 1px transparent;
                 width: 300px 300px;
                 background-image: linear-gradient(#6ca4d8, white);
                 justify-content: auto;
