--- a/Decumani Email Signature 2025.html
+++ b/Decumani Email Signature 2025.html
@@ -1,36 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/
-TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv=""X-UA-Compatible" content=""IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional E-signature</title>
+    <title>Document</title>
 </head>
 <body>
     <div>
-        <style type="text/css">
-            body {
-                margin: 15px;
-                background-color: #ffffff;
-            }
-            table {
-                border-spacing: 0;
-            }
-
+        <style>
             .email-signature-container {
                 display: flex;
-                border: 1px transparent;
-                width: 300px 300px;
-                background-image: linear-gradient(#6ca4d8, white);
-                justify-content: auto;
+                border: 1px solid;
+                width: 400px 400px;
+                background: #ddebf8;
+                justify-content: center;
                 padding: 20px;
             }
             .signature-img {
-                height: 200px;
-                border-radius: 200px;
-                justify-content: left;
-                margin: 0 60px 0 60px;
+                height: 108px;
+                border-radius: 108px;
             }
             .personal-data {
                 display: inline-block;
@@ -81,32 +70,21 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
                 padding-top: 3%;
 
             }
-
-            .social_links a:hover {
-                transform: scale(1.15);
-                transition: transform 0.6s ease;
-            }
         </style>
         <div class="email-signature-container">
-        <table role="presentation">
-        <tbody>
-            <tr>
-                <td>
     <img 
-      src="./Assets/Mug_Shot.png"
+      src="./Assets/Email_Profile_Image.png"
       alt="Mike Sherokee"
       class="signature-img"
     />
-   </td>
-   <table>
-   </tr>
     <div class="personal-data">
         <span class="contact-info name">Michael D. Sherokee - Owner</span>
         <span class="contact-info titles"> Translator | Interpreter | Software Developer </span>
         <span class="contact-info-company"> Decumani Language Services & Solutions LLC </span>
         <span class="contact-info">
+            <span class="contact-info-title">Homepage | Let's Talk! </span>
+            <a href="https://www.decumanilangllc.com"  href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"></a>
             
-            <a href="https://www.decumanilangllc.com"><span class="contact-info-title">Homepage | </span></a><a href="https://calendly.com/decumani-languages/italian_1_2?month=2024-12"><span>Let's Talk!</span></a>  
         </span>
         <span class="contact-info">
             <span class="contact-info-title">Phone: </span>
@@ -119,18 +97,21 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
             
         </span>
     <div class="social_links"> 
-      <a href="https://www.facebook.com/mike.superlink/"><img src="./Assets/facebook.png" width="45">
-             </a>
-            <a href="https://www.linkedin.com/in/michael-sherokee/"><img src="./Assets/linkedin.png" width="45">
-            </a>
-             <a href="https://www.proz.com/translator/2909606/"><img src="./Assets/proz.com_icon.png" width="45">  
-            </a>
-            <a href="https://www.instagram.com/decumani_languages/"><img src="./Assets/instagram.png" width="45">
-             </a>
-            <a href="https://github.com/MicheleDS79"><img src="./Assets/github.png" width="45">
-            </a>
-        </tbody>
-        </table>
-        </div>
-  </body>
+      <img src="./Assets/facebook.png" width="45"
+             <a href="https://www.facebook.com/mike.superlink/"
+            />
+            <img src="./Assets/linkedin.png" width="45"
+             <a href="https://www.linkedin.com/in/michael-sherokee/"
+            />
+            <img src="./Assets/proz.com_icon.png" width="45"
+             <a href="https://www.proz.com/translator/2909606/"
+            />
+            <img src="./Assets/instagram.png" width="45"
+             <a href="https://www.instagram.com/decumani_languages/"
+            />
+            <img src="./Assets/github.png" width="45"
+            <a href="https://github.com/MicheleDS79"
+            />
+     </div>   
+</body>
 </html>
