New Email Signature Formatted with table elements

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
     />
    </td>
    <table>
+   <tbody>
    </tr>
+   <td>
     <div class="personal-data">
         <span class="contact-info name">Michael D. Sherokee - Owner</span>
         <span class="contact-info titles"> Translator | Interpreter | Software Developer </span>
@@ -115,8 +117,7 @@ TR/xhtml1/DTD/xhtml1-transitional.dtd">
         </span>
         <span class="contact-info">
             <span class="contact-info-title">Whatsapp: </span> 
-            <a class="contact-info-whats" href="tel:+(39)3406870554">+(39)3406870554</a>
-            
+            <a class="contact-info-whats" href="tel:+(39)3406870554">+(39)3406870554</a>    
         </span>
     <div class="social_links"> 
       <a href="https://www.facebook.com/mike.superlink/"><img src="./Assets/facebook.png" width="45">
