Block note for Mug Shot

--- a/index(2).html
+++ b/index(2).html
@@ -89,7 +89,7 @@
         <tbody>
           <tr>
             <td valign="middle">
-              <!-- Mug Shot -->
+              <!-- Mug Shot  Some touchups to shadowing in GIMP?? -->
               <img 
               src="./Assets/Mug_Shot.png"
               alt="Mike Sherokee"
